@startuml
class Book {
  - title : String
  - author : String
  + getTitle() : String
  + getAuthor() : String
  + toString() : String
}

class Library {
  - books : List<Book>
  + addBook(Book)
  + printAllBooks()
}

class App {
  + main(String[]) : void
}

App --> Library
Library --> Book
@enduml
